RESOLVED FIXED 152960
CSSValuePool should use nonfragmented storage for eternal caches.
https://bugs.webkit.org/show_bug.cgi?id=152960
Summary CSSValuePool should use nonfragmented storage for eternal caches.
Andreas Kling
Reported 2016-01-10 09:51:08 PST
The cached CSSValue objects in CSSValuePool get allocated at different times. It would be better if they didn't end up all over the heap.
Attachments
Patch (13.47 KB, patch)
2016-01-10 09:51 PST, Andreas Kling
buildbot: commit-queue-
Archive of layout-test-results from ews115 for mac-yosemite (637.32 KB, application/zip)
2016-01-10 10:25 PST, Build Bot
no flags
Patch (15.58 KB, patch)
2016-01-10 11:40 PST, Andreas Kling
no flags
Patch (14.40 KB, patch)
2016-01-10 16:19 PST, Andreas Kling
koivisto: review+
commit-queue: commit-queue-
Patch for landing (14.40 KB, patch)
2016-01-11 03:25 PST, Andreas Kling
no flags
Andreas Kling
Comment 1 2016-01-10 09:51:38 PST
Build Bot
Comment 2 2016-01-10 10:25:07 PST
Comment on attachment 268651 [details] Patch Attachment 268651 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/675482 Number of test failures exceeded the failure limit.
Build Bot
Comment 3 2016-01-10 10:25:10 PST
Created attachment 268652 [details] Archive of layout-test-results from ews115 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews115 Port: mac-yosemite Platform: Mac OS X 10.10.5
Andreas Kling
Comment 4 2016-01-10 11:40:22 PST
Andreas Kling
Comment 5 2016-01-10 16:19:10 PST
WebKit Commit Bot
Comment 6 2016-01-11 02:15:20 PST
Comment on attachment 268666 [details] Patch Rejecting attachment 268666 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'validate-changelog', '--check-oops', '--non-interactive', 268666, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: a/EWS/WebKit/Tools/Scripts/webkitpy/tool/commands/stepsequence.py", line 73, in run_and_handle_errors self._run(tool, options, state) File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/tool/commands/stepsequence.py", line 67, in _run step(tool, options).run(state) File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/tool/steps/validatereviewer.py", line 54, in run if changelog_entry.has_valid_reviewer(): AttributeError: 'NoneType' object has no attribute 'has_valid_reviewer' Full output: http://webkit-queues.webkit.org/results/677999
WebKit Commit Bot
Comment 7 2016-01-11 03:23:13 PST
Comment on attachment 268666 [details] Patch Rejecting attachment 268666 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'validate-changelog', '--check-oops', '--non-interactive', 268666, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: a/EWS/WebKit/Tools/Scripts/webkitpy/tool/commands/stepsequence.py", line 73, in run_and_handle_errors self._run(tool, options, state) File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/tool/commands/stepsequence.py", line 67, in _run step(tool, options).run(state) File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/tool/steps/validatereviewer.py", line 54, in run if changelog_entry.has_valid_reviewer(): AttributeError: 'NoneType' object has no attribute 'has_valid_reviewer' Full output: http://webkit-queues.webkit.org/results/678176
Andreas Kling
Comment 8 2016-01-11 03:25:58 PST
Created attachment 268683 [details] Patch for landing
WebKit Commit Bot
Comment 9 2016-01-11 04:24:13 PST
Comment on attachment 268683 [details] Patch for landing Clearing flags on attachment: 268683 Committed r194848: <http://trac.webkit.org/changeset/194848>
WebKit Commit Bot
Comment 10 2016-01-11 04:24:18 PST
All reviewed patches have been landed. Closing bug.
Andreas Kling
Comment 11 2016-01-11 07:48:42 PST
Windows build fix coming up..
Note You need to log in before you can comment on or make changes to this bug.